# spacy-neo4j-procedures

./: Dockerfile  README.md  docker-compose.yml  example.py  pyproject.toml  setup.cypher
src/neo4j_spacy_procedures/: __init__.py  procedures.py
tests/: test_procedures.py
